--- a/panel.html
+++ b/panel.html
@@ -14,7 +14,7 @@
 
   <style>
     * {
-      font-family: 'Morabba-Regular', Tahoma, Arial, sans-serif;
+      font-family: 'Vazirmatn', Tahoma, Arial, sans-serif;
     }
 
     /* ==========================
@@ -983,5 +983,6 @@
     });
   </script>
 </body>
+
 
 </html>
