--- a/customers.html
+++ b/customers.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>مدیریت مشتریان — پنل کاربری</title>
-
+<link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
-      font-family: 'Morabba-Regular', Tahoma, Arial, sans-serif;
+      font-family: 'Vazirmatn', Tahoma, Arial, sans-serif;
     }
 
     /* ==========================
@@ -1020,5 +1020,6 @@
     });
   </script>
 </body>
+
 
 </html>
