--- a/profile.html
+++ b/profile.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>پروفایل کاربری — پنل مدیریت</title>
-
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     /* ==========================
      تنظیمات پایه و متغیرها
      ========================== */
     * {
-      font-family: 'Morabba-Regular', Tahoma, Arial, sans-serif;
+      font-family: 'Vazirmatn', Tahoma, Arial, sans-serif;
     }
 
     :root {
@@ -988,5 +988,6 @@
     });
   </script>
 </body>
+
 
 </html>
