--- a/subscriptions.html
+++ b/subscriptions.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>مدیریت اشتراک‌ها — پنل کاربری</title>
-
+<link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
+    *{
+      font-family : 'Vazirmatn';
+    }
     /* ==========================
      تنظیمات پایه و متغیرها
      ========================== */
@@ -1069,5 +1072,6 @@
     });
   </script>
 </body>
+
 
 </html>
