--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
           </li><!-- End Mega Menu 2 -->
 
-          <li><a href="#contact.html">ارتباط با ما</a></li>
+          <li><a href="contact.html">ارتباط با ما</a></li>
           <li><a href="login.html">ثبت نام/ورود</a></li> <!-- اضافه کردن لینک ورود/ثبت نام -->
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
